--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "alert": "^5.1.1",
     "antd": "^4.21.7",
     "axios": "^0.27.2",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.2",
@@ -43,11 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": {
-    "/api":  {
-        "target": "http://localhost:5000/",
-        "secure": false,
-        "changeOrigin": true
-    }
-}
+  "proxy": "http://localhost:5000/"
 }
